// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHorizontalGroupedBars() should sort bars in "ascending" order 1`] = `
Array [
  Object {
    "color": "red",
    "height": 66.25,
    "key": "0.people",
    "selector": Array [
      0,
      "people",
    ],
    "value": 10,
    "width": 380,
    "x": 10,
    "y": 81.25,
  },
  Object {
    "color": "green",
    "height": 66.25,
    "key": "0.rooms",
    "selector": Array [
      0,
      "rooms",
    ],
    "value": 3,
    "width": 114,
    "x": 10,
    "y": 15,
  },
  Object {
    "color": "red",
    "height": 66.25,
    "key": "1.people",
    "selector": Array [
      1,
      "people",
    ],
    "value": 2,
    "width": 76,
    "x": 10,
    "y": 147.5,
  },
  Object {
    "color": "green",
    "height": 66.25,
    "key": "1.rooms",
    "selector": Array [
      1,
      "rooms",
    ],
    "value": 10,
    "width": 380,
    "x": 10,
    "y": 213.75,
  },
]
`;

exports[`generateHorizontalGroupedBars() should sort bars in "descending" order 1`] = `
Array [
  Object {
    "color": "red",
    "height": 66.25,
    "key": "0.people",
    "selector": Array [
      0,
      "people",
    ],
    "value": 15,
    "width": 162.85714285714286,
    "x": 10,
    "y": 81.25,
  },
  Object {
    "color": "green",
    "height": 66.25,
    "key": "0.rooms",
    "selector": Array [
      0,
      "rooms",
    ],
    "value": 34,
    "width": 369.1428571428571,
    "x": 10,
    "y": 15,
  },
  Object {
    "color": "red",
    "height": 66.25,
    "key": "1.people",
    "selector": Array [
      1,
      "people",
    ],
    "value": 21,
    "width": 228,
    "x": 10,
    "y": 147.5,
  },
  Object {
    "color": "green",
    "height": 66.25,
    "key": "1.rooms",
    "selector": Array [
      1,
      "rooms",
    ],
    "value": 10,
    "width": 108.57142857142856,
    "x": 10,
    "y": 213.75,
  },
]
`;

exports[`generateVerticalGroupedBars() should sort bars in "ascending" order 1`] = `
Array [
  Object {
    "color": "red",
    "height": 370,
    "key": "0.people",
    "selector": Array [
      0,
      "people",
    ],
    "value": 10,
    "width": 120,
    "x": 130,
    "y": 10,
  },
  Object {
    "color": "blue",
    "height": 111,
    "key": "0.rooms",
    "selector": Array [
      0,
      "rooms",
    ],
    "value": 3,
    "width": 120,
    "x": 10,
    "y": 269,
  },
  Object {
    "color": "red",
    "height": 74,
    "key": "1.people",
    "selector": Array [
      1,
      "people",
    ],
    "value": 2,
    "width": 120,
    "x": 250,
    "y": 306,
  },
  Object {
    "color": "blue",
    "height": 370,
    "key": "1.rooms",
    "selector": Array [
      1,
      "rooms",
    ],
    "value": 10,
    "width": 120,
    "x": 370,
    "y": 10,
  },
]
`;

exports[`generateVerticalGroupedBars() should sort bars in "descending" order 1`] = `
Array [
  Object {
    "color": "red",
    "height": 158.57142857142858,
    "key": "0.people",
    "selector": Array [
      0,
      "people",
    ],
    "value": 15,
    "width": 120,
    "x": 130,
    "y": 221.42857142857142,
  },
  Object {
    "color": "blue",
    "height": 359.42857142857144,
    "key": "0.rooms",
    "selector": Array [
      0,
      "rooms",
    ],
    "value": 34,
    "width": 120,
    "x": 10,
    "y": 20.571428571428577,
  },
  Object {
    "color": "red",
    "height": 222,
    "key": "1.people",
    "selector": Array [
      1,
      "people",
    ],
    "value": 21,
    "width": 120,
    "x": 250,
    "y": 158,
  },
  Object {
    "color": "blue",
    "height": 105.71428571428572,
    "key": "1.rooms",
    "selector": Array [
      1,
      "rooms",
    ],
    "value": 10,
    "width": 120,
    "x": 370,
    "y": 274.2857142857143,
  },
]
`;
